chages to robot / sitemap / layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="css/general.css" rel="stylesheet">
-<link href="css/grid.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
 <title>Fixd Home</title>
 </head>
 
@@ -15,8 +15,8 @@
 		</div>
 		<nav class="nav nav-top" data-state="collapsed">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="index.html">Articles</a></li>
+				<li><a href="{{site.baseurl}}/index.html">Home</a></li>
+				<li><a href="{{site.baseurl}}/index.html">Articles</a></li>
 				<li><a href="index.html">Page 3</a></li>
                 <li><a href="index.html">Page 4</a></li>
 			</ul>
