edited layouts / robots / sitemap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link href="css/general.css" rel="stylesheet">
-<link href="css/grid.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
+
+<!--Facebook-->
+<meta property="og:type" content"article">
+<meta property="og:title" content"Fixd Home">
+<meta property="og:url" content"http://nickmcd.github.io/large-data-website/">
+<meta property="og:image" content"http://domain.com/img/image.jpg">
+<meta property="og:description" content"Fixd oontains everything you need to know about Fixed-gear bicycles in one place">
+<meta property="og:site_name" content"Fixd">
+
+<!--Twitter-->
+<meta property="twitter:card" content"summary">
+<meta property="twitter:title" content"Fixd Home">
+<meta property="twitter:url" content"http://nickmcd.github.io/large-data-website/">
+<meta property="twitter:image" content"http://domain.com/img/image.jpg">
+<meta property="twitter:description" content"Fixd oontains everything you need to know about Fixed-gear bicycles in one place">
+
 <title>Fixd Home</title>
 </head>
 
@@ -15,8 +31,8 @@
 		</div>
 		<nav class="nav nav-top" data-state="collapsed">
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="index.html">Articles</a></li>
+				<li><a href="{{site.baseurl}}/index.html">Home</a></li>
+				<li><a href="{{site.baseurl}}/index.html">Articles</a></li>
 				<li><a href="index.html">Page 3</a></li>
                 <li><a href="index.html">Page 4</a></li>
 			</ul>
