--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,12 @@
 <meta charset="UTF-8">
 <link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
 <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
-<<<<<<< HEAD
 
 <!--Facebook-->
 <meta property="og:type" content"article">
 <meta property="og:title" content"Fixd Home">
 <meta property="og:url" content"http://nickmcd.github.io/large-data-website/">
-<meta property="og:image" content"http://domain.com/img/image.jpg">
+<meta property="og:image" content"img/bike-2.jpg">
 <meta property="og:description" content"Fixd oontains everything you need to know about Fixed-gear bicycles in one place">
 <meta property="og:site_name" content"Fixd">
 
@@ -18,11 +17,9 @@
 <meta property="twitter:card" content"summary">
 <meta property="twitter:title" content"Fixd Home">
 <meta property="twitter:url" content"http://nickmcd.github.io/large-data-website/">
-<meta property="twitter:image" content"http://domain.com/img/image.jpg">
+<meta property="twitter:image" content"img/bike-2.jpg">
 <meta property="twitter:description" content"Fixd oontains everything you need to know about Fixed-gear bicycles in one place">
 
-=======
->>>>>>> 9ae490502ff0700bcc1e9c298e687d4d29f8ac56
 <title>Fixd Home</title>
 </head>
 
@@ -53,8 +50,6 @@
                 <li><a href="index.html">Page 4</a></li>
 			</ul>
 		</nav>
-    
-   <script src="js/general.js"></script>
-   
- 	
+		  
+   <script src="js/general.js"></script>	
 </body>
