added website fallbacks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <link href="{{site.baseurl}}/css/general.css" rel="stylesheet">
 <link href="{{site.baseurl}}/css/grid.css" rel="stylesheet">
+<link href="{{site.baseurl}}/css/normalize.css" rel="stylesheet">
+
 
 <!--Facebook-->
 <meta property="og:type" content"article">
@@ -22,6 +24,8 @@
 
 <title>Fixd Home</title>
 </head>
+
+   <script src="js/modernizr.js"></script>
 
 <body id="top">
 	<header class="masthead clearfix">
