--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
 		<nav class="nav nav-top" data-state="collapsed">
 			<ul>
 				<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-				<li><a href="{{site.baseurl}}/index.html">Articles</a></li>
-				<li><a href="index.html">Page 3</a></li>
+				<li><a href="{{site.baseurl}}/article-1.html">Article One</a></li>
+				<li><a href="{{site.baseurl}}/article-2.html">Article Two</a></li>
                 <li><a href="index.html">Page 4</a></li>
 			</ul>
 		</nav>
@@ -49,9 +49,8 @@
 <nav class="nav" data-state="collapsed">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="index.html">Articles</a></li>
-				<li><a href="index.html">Page 3</a></li>
-                <li><a href="index.html">Page 4</a></li>
+				<li><a href="article-1.html">Article One</a></li>
+				<li><a href="article-2.html">Article Two</a></li>
 			</ul>
 		</nav>
 		  
