--- a/css/404.css
+++ b/css/404.css
@@ -14,3 +14,18 @@ background-color:#059D9B;
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	color: #FFF;
 }
+
+h1 { 
+	text-align:center;
+	font-size: 20px;
+	margin: 20px;
+	
+	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+
+		
+}
+
+h1 a { 
+
+	color: #FFF;
+}
